test/end-to-end/compile-errors/match-case-missing-name.crow
f string()
	match ()::nat?
	as
		1
